# WebCore

./: .clang-format  .gitignore  CMakeLists.txt  CreateSDK.cmake  Deps.cmake  Jenkinsfile  README.md  make  make-cross-linux.bat  make-dbg.bat  make-rel-dbg.bat  make-rel-dbg32.bat  make-rel-min.bat  make-rel-min32.bat  make-vs.bat  make.bat
Source/: CMakeLists.txt
Source/CopySDK/: CMakeLists.txt
Source/GetDeps/: CMakeLists.txt  dummy.c
Source/JavaScriptCore/: CMakeLists.txt  PlatformGTK.cmake  PlatformUltralight.cmake  PlatformUltralightLinux.cmake  PlatformUltralightMac.cmake  PlatformUltralightWin.cmake  PlatformWin.cmake  config.h  jsc.cpp
Source/JavaScriptCore/API/: APICallbackFunction.h  JSCallbackFunction.cpp  JSCallbackFunction.h  JSCallbackObjectFunctions.h  JSClassRef.cpp  JSClassRef.h  JSObjectRef.cpp  JSObjectRef.h  JSRetainPtr.h  JSStringRef.cpp  OpaqueJSString.cpp  WebKitAvailability.h
Source/JavaScriptCore/JavaScriptCore.vcxproj/: JavaScriptCore.proj
Source/JavaScriptCore/assembler/: AssemblerBuffer.h  MacroAssemblerX86Common.cpp  MacroAssemblerX86_64.h
Source/JavaScriptCore/builtins/: BuiltinUtils.h
Source/JavaScriptCore/bytecode/: UnlinkedFunctionExecutable.h
Source/JavaScriptCore/bytecompiler/: BytecodeGenerator.cpp  BytecodeGenerator.h  RegisterID.h
Source/JavaScriptCore/dfg/: DFGOSRExit.cpp  DFGOSRExitCompilerCommon.cpp  DFGOperations.cpp
Source/JavaScriptCore/disassembler/: Disassembler.cpp  X86Disassembler.cpp
Source/JavaScriptCore/ftl/: FTLLowerDFGToB3.cpp  FTLOSRExitCompiler.cpp  FTLSlowPathCall.cpp
Source/JavaScriptCore/heap/: AlignedMemoryAllocator.cpp  CompleteSubspace.cpp  ConservativeRoots.cpp  EdenGCActivityCallback.cpp  Heap.cpp  HeapHelperPool.cpp  IncrementalSweeper.cpp  IsoAlignedMemoryAllocator.cpp  IsoAlignedMemoryAllocator.h  LocalAllocator.cpp  MarkedBlock.cpp  MarkedBlock.h  SlotVisitor.cpp
Source/JavaScriptCore/inspector/: ConsoleMessage.cpp  ConsoleMessage.h  EventLoop.cpp  JSGlobalObjectInspectorController.cpp
Source/JavaScriptCore/interpreter/: CLoopStack.cpp  CLoopStack.h  Interpreter.cpp
Source/JavaScriptCore/jit/: AssemblyHelpers.cpp  AssemblyHelpers.h  CCallHelpers.cpp  ExecutableAllocator.cpp  JITCodeInlines.h  JITWorklist.cpp  JITWorklist.h  JITWorklistThread.cpp  RegisterSet.cpp  ThunkGenerators.cpp
Source/JavaScriptCore/llint/: LLIntOfflineAsmConfig.h  LLIntSlowPaths.cpp  LLIntThunks.cpp  LowLevelInterpreter.cpp
Source/JavaScriptCore/offlineasm/: asm.rb  generate_offset_extractor.rb  generate_settings_extractor.rb  parser.rb
Source/JavaScriptCore/parser/: Parser.h
Source/JavaScriptCore/runtime/: ArrayBuffer.cpp  ArrayConstructor.h  ArrayPrototype.cpp  CallData.cpp  CommonSlowPaths.cpp  Completion.cpp  IntlPluralRules.cpp  IteratorOperations.cpp  JSCast.h  JSCellInlines.h  JSGlobalObject.cpp  JSPromiseDeferred.cpp  JSRunLoopTimer.cpp  ModuleProgramExecutable.cpp  NumberPrototype.cpp  ScriptExecutable.cpp  VM.h
Source/JavaScriptCore/shell/: PlatformUltralightLinux.cmake
Source/JavaScriptCore/tools/: Integrity.h  JSDollarVM.cpp  JSDollarVMPrototype.cpp
Source/JavaScriptCore/wasm/: WasmAirIRGenerator.cpp  WasmB3IRGenerator.cpp  WasmMemory.cpp  WasmMemory.h
Source/SQLite/: CMakeLists.txt  sqlite3.h
Source/WTF/: CMakeLists.txt
Source/WTF/WTF.vcxproj/: WTF.proj
Source/WTF/wtf/: ASCIICType.cpp  AllocatorOverride.cpp  AllocatorOverride_Windows.h  Assertions.h  ByteOrder.h  CMakeLists.txt  CrossThreadQueue.h  CrossThreadTaskHandler.cpp  CrossThreadTaskHandler.h  CurrentTime.cpp  DataLog.cpp  FastMalloc.cpp  FastMalloc.h  FileSystem.cpp  FileSystem.h  Gigacage.h  HashTable.h  Identified.h  Language.h  MachSendRight.h  MainThread.cpp  Markable.h  MediaTime.cpp  MemoryPressureHandler.cpp  MemoryPressureHandler.h  MemoryProfiler.cpp  MemoryProfiler.h  MemoryProfiler_CppSymbols.h  MemoryProfiler_WinHeap.cpp  MemoryProfiler_WinHeap.h  MemoryProfiler_Windows.h  ParallelHelperPool.cpp  Platform.h  PlatformEnable.h  PlatformHave.h  PlatformLegacy.h  PlatformUltralightLinux.cmake  PlatformUltralightMac.cmake  PlatformUltralightWin.cmake  PlatformUse.h  (+20 more)
Source/WebCore/: CMakeLists.txt  Headers.cmake  PlatformMac.cmake  PlatformUltralightLinux.cmake  PlatformUltralightMac.cmake  PlatformUltralightWin.cmake  PlatformWin.cmake  UWPDefs.h  WebCoreMacros.cmake  WebCorePrefix.cpp  WebCorePrefix.h  WinPlatformDefines.h  config.h  public.sym  public_linux.sym
Source/WebCore/WebCore.vcxproj/: WebCore.proj
Source/WebCore/accessibility/: AccessibilityAllInOne.cpp
Source/WebCore/animation/: AnimationTimeline.cpp  DocumentTimeline.cpp  KeyframeEffect.cpp
Source/WebCore/css/: CSSGradientValue.cpp  StyleResolver.cpp  fullscreen.css  html.css  mathml.css  themeWin.css
Source/WebCore/dom/: Attr.cpp  Document.cpp  Document.h  Element.cpp  Node.h  ScriptExecutionContext.cpp  ScriptRunner.cpp  ScriptedAnimationController.cpp  ShadowRoot.h  Text.cpp  XMLDocument.h
Source/WebCore/domjit/: generate-abstract-heap.rb
Source/WebCore/editing/: ApplyBlockElementCommand.cpp  FrameSelection.cpp  FrameSelection.h
Source/WebCore/fileapi/: AsyncFileStream.cpp  BlobURL.cpp  BlobURL.h
Source/WebCore/history/: BackForwardCache.cpp  BackForwardCache.h  BackForwardController.h  PageCache.cpp  PageCache.h
Source/WebCore/html/: CanvasBase.cpp  CanvasBase.h  HTMLCanvasElement.cpp  HTMLDocument.cpp  (+3 more)
Source/WebInspectorUI/: CMakeLists.txt
Source/bmalloc/: CMakeLists.txt
Source/cmake/: CrossLinuxX64Toolchain.cmake  FindDirectX.cmake  FindGI.cmake  FindGIDocgen.cmake  GtkDoc.cmake  OptionsAppleWin.cmake  OptionsCommon.cmake  OptionsFTW.cmake  OptionsGTK.cmake  OptionsJSCOnly.cmake  OptionsMSVC.cmake  OptionsPlayStation.cmake  OptionsUltralightLinux.cmake  OptionsUltralightMac.cmake  OptionsUltralightWin.cmake  OptionsWPE.cmake  OptionsWin.cmake  PrecompiledHeader.cmake  UltralightDefinitions.cmake  UltralightOptions.cmake  WebKitCCache.cmake  WebKitCommon.cmake  WebKitCompilerFlags.cmake  WebKitDist.cmake  WebKitFS.cmake  WebKitFeatures.cmake  WebKitFindPackage.cmake  WebKitMacros.cmake
Source/mimalloc/: CMakeLists.txt
(+607 files in other folders)
